[project]
name = "habr-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Gealor",email = "gzazulya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
